--- a/recent_events.html
+++ b/recent_events.html
@@ -447,22 +447,149 @@
 
         <!-- Models -->
 
-        <!-- Techvistara -->
-        <div class="modal fade" id="blog-w3ls14" tabindex="-1" role="dialog" aria-labelledby="largeModal" aria-hidden="true">
+        <!-- Angular101 -->
+        <div class="modal fade" id="blog-w3ls19" tabindex="-1" role="dialog" aria-labelledby="largeModal" aria-hidden="true">
             <div class="modal-dialog modal-lg">
                 <div class="modal-content">
                     <div class="modal-header">
                         <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-                        <h4 class="modal-title">Techvistara</h4>
+                        <h4 class="modal-title">Angular101</h4>
                     </div>
                     <div class="modal-body">
                         <div class="col-lg-6 col-md-6 col-sm-12">
-                            <img class="img-responsive team-agile" src="RecentEventImage/Techvistara.png" alt="">
+                            <img class="img-responsive team-agile" src="RecentEventImage/Angular101.jpeg" alt="">
                         </div>
                         <div class="col-lg-6 col-md-6 col-sm-12">
                             <p>
                                 <!-- Add Content -->
                             </p>
+                        </div>
+                        <div class="clearfix"></div>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                    </div>
+                </div>
+                <!-- /.modal-content -->
+            </div>
+            <!-- /.modal-dialog -->
+        </div>
+        <!-- /.modal -->
+
+        <!-- SIGNOVA’20 -->
+        <div class="modal fade" id="blog-w3ls18" tabindex="-1" role="dialog" aria-labelledby="largeModal" aria-hidden="true">
+            <div class="modal-dialog modal-lg">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                        <h4 class="modal-title">SIGNOVA’20</h4>
+                    </div>
+                    <div class="modal-body">
+                        <div class="col-lg-6 col-md-6 col-sm-12">
+                            <img class="img-responsive team-agile" src="RecentEventImage/signova20.jpeg" alt="">
+                        </div>
+                        <div class="col-lg-6 col-md-6 col-sm-12">
+                            <p>
+                                SIGNOVA’20 was an event jointly organised by IEEE SPS SBC CET, SBC TKMCE and SBC MBCET. The inauguration took place on 17 th October 2020 from 7.30pm. The function was inaugurated by Dr. Suresh K, Chairman of IEEE SPS Kerala Section. He explained the
+                                importance of IEEE membership as well as the future opportunities in Signal Processing. </p>
+                        </div>
+                        <div class="clearfix"></div>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                    </div>
+                </div>
+                <!-- /.modal-content -->
+            </div>
+            <!-- /.modal-dialog -->
+        </div>
+        <!-- /.modal -->
+
+        <!-- RobotrIEEEx -->
+        <div class="modal fade" id="blog-w3ls17" tabindex="-1" role="dialog" aria-labelledby="largeModal" aria-hidden="true">
+            <div class="modal-dialog modal-lg">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                        <h4 class="modal-title">RobotrIEEEx</h4>
+                    </div>
+                    <div class="modal-body">
+                        <div class="col-lg-6 col-md-6 col-sm-12">
+                            <img class="img-responsive team-agile" src="RecentEventImage/robotrIEEEx.jpeg" alt="">
+                        </div>
+                        <div class="col-lg-6 col-md-6 col-sm-12">
+                            <p>
+                                As part of RobotrIEEEx, an interactive session on Day-1 was taken by Mr. Jijo Jose on the topic Basics of Robotics and Mr. Vishnu P Kumar sharing some of his experiences in robotics. Mr Jijo started the session introducing himself and moved onto the topic
+                                with a presentation. He mainly focused on how to get into robotics if someone is really patinate toward it. Then he moved on showing us some basic components and devices which can be used in robots in basic level. He showed
+                                different types of robots on the basis of evolution with their working and operation of different parts. He ended the session by saying that “If we are really interested in something start it today, explore it more and
+                                more every day.” Mr Vishnu P Kumar started of sharing his experience with a presentation. He explained how he started his journey towards robotics. He showed us different robots that he had build till the date. Also, some
+                                of the projects he builds to solve public problems. The session ended with interactive section, clearing all the doubts of inquisitive participants.
+                            </p>
+                        </div>
+                        <div class="clearfix"></div>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                    </div>
+                </div>
+                <!-- /.modal-content -->
+            </div>
+            <!-- /.modal-dialog -->
+        </div>
+        <!-- /.modal -->
+
+        <!-- Epectro -->
+        <div class="modal fade" id="blog-w3ls16" tabindex="-1" role="dialog" aria-labelledby="largeModal" aria-hidden="true">
+            <div class="modal-dialog modal-lg">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                        <h4 class="modal-title">Epectro</h4>
+                    </div>
+                    <div class="modal-body">
+                        <div class="col-lg-6 col-md-6 col-sm-12">
+                            <img class="img-responsive team-agile" src="RecentEventImage/espectro.jpeg" alt="">
+                        </div>
+                        <div class="col-lg-6 col-md-6 col-sm-12">
+                            <p>
+                                ESPECTRO, the inauguration of the IEEE Signal Processing Society SBC of MBCET, IEEE’s first society was held on 23 rd September 2020. The Event was inaugurated by DR.SURESH.K, Chairman of IEEE SPS Kerala Chapter. Followed by inauguration was an interactive
+                                and learning session with DR. JIJI.C.V, Principal of College Of Engineering, Trivandrum, on the topic SIGNAL PROCESSING TEACHING IN PRESENT SCENARIO. Dr. Jiji had made each and every curious participant more aware of the
+                                Video and Image Processing Challenge. He also discussed about two flagship conferences. The Second day of the webinar was handled by DR. M.V.Rajesh, Vice Chairperson, IEEE SPS, Kerala Section, on the topic DSP DEMYSTIFIED.
+                                He briefed how a signal is generated and sampled and also explained the uses of DSP. The event ended with the queries on the applications of DSP in various fields. The Last Event of ESPECTRO was handled by DR. VARUN GOPI
+                                , Assistant Professor, National Institute Of Technology, Trichy, explaining all the APPLICATIONS OF DSP. He also addressed about areas of future jobs in Signal Processing. The session ended with the interactive section,
+                                clearly all the doubts of inquisitive participants. </p>
+                        </div>
+                        <div class="clearfix"></div>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                    </div>
+                </div>
+                <!-- /.modal-content -->
+            </div>
+            <!-- /.modal-dialog -->
+        </div>
+        <!-- /.modal -->
+
+        <!-- PRACTICAL USAGE OF TECHNOLOGY IN THE TIME OF FLOODS -->
+        <div class="modal fade" id="blog-w3ls15" tabindex="-1" role="dialog" aria-labelledby="largeModal" aria-hidden="true">
+            <div class="modal-dialog modal-lg">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                        <h4 class="modal-title">PRACTICAL USAGE OF TECHNOLOGY IN THE TIME OF FLOODS</h4>
+                    </div>
+                    <div class="modal-body">
+                        <div class="col-lg-6 col-md-6 col-sm-12">
+                            <img class="img-responsive team-agile" src="RecentEventImage/15PracticalUse.jpg" alt="">
+                        </div>
+                        <div class="col-lg-6 col-md-6 col-sm-12">
+                            <p>
+                                On September 20 th , the IEEE Special Interest Group on Humanitarian Technology (SIGHT) of Mar Baselios College of Engineering and Technology and IEEE Special Interest Group on Humanitarian Technology (SIGHT) Kerala Section jointly conducted a webinar
+                                focusing on practical usage of technology in the time of floods. The webinar was opened to all without any registration fees and a total of 115 participants attended the session. The introductory note which was of 5-10
+                                minutes was given by IEEE SIGHT Kerala chapter chairperson Mr. Jayakrishnan MC. The speaker was SE, Security Advisor Mr. Vignesh Hari. The session was of one-hour duration. The speaker covered the area of practical usage
+                                of technology and using it during the covid era. Problem statements and solution were discussed both by the speaker and the participants. In the last 10 minutes, the speaker cleared most of the queries that were dropped
+                                in the chat box. The session was highly informative and practical. The poster of the event and some screenshots of the webinar are attached herewith. </p>
                         </div>
                         <div class="clearfix"></div>
                     </div>
