--- a/index.html
+++ b/index.html
@@ -235,21 +235,21 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                 <li class="col-12 col-md-8 col-lg-4 mb-5 mt-5 pt-5 pb-5">
                     <div class="cnt-block equal-hight" style="height: 280px;">
                         <figure><img src="images/bursar.jpg" class="img-responsive" alt=""></figure>
-                        <h3 class="text-center pt-3" style="font-size: 20px;" ><b>Fr. John Vilayil</b></h3>
+                        <h3 class="text-center pt-3" style="font-size: 20px;"><b>Fr. John Vilayil</b></h3>
                         <p><b>Bursar</b></p>
                     </div>
                 </li>
                 <li class="col-12 col-md-8 col-lg-4 mb-5 mt-5 pt-5 pb-5">
                     <div class="cnt-block equal-hight" style="height: 280px;">
-                        <figure><img src="images/Prin.jpeg"class="img-responsive" alt=""></figure>
-                        <h3 class="text-center pt-3" style="font-size: 20px;" ><b>Dr. T M George</b></h3>
+                        <figure><img src="images/Prin.jpeg" class="img-responsive" alt=""></figure>
+                        <h3 class="text-center pt-3" style="font-size: 20px;"><b>Dr. T M George</b></h3>
                         <p><b>Principal</b></p>
                     </div>
                 </li>
                 <li class="col-12 col-md-8 col-lg-4 mb-5 mt-5 pt-5 pb-5">
                     <div class="cnt-block equal-hight" style="height: 280px;">
                         <figure><img src="images/Vice.jpg" class="img-responsive" alt=""></figure>
-                        <h3 class="text-center pt-3" style="font-size: 20px;" ><b>Prof. S. Viswanatha Rao</b></h3>
+                        <h3 class="text-center pt-3" style="font-size: 20px;"><b>Prof. S. Viswanatha Rao</b></h3>
                         <p><b>Vice Principal</b></p>
                     </div>
                 </li>
@@ -437,7 +437,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
         </div>
         <!-- /.modal -->
         <div class="recentPg">
-            <a target="_blank" href="recentEvents.html" class="pgRoute">More <i class="fas fa-arrow-circle-right"></i></a>
+            <a target="_blank" href="recent_events.html" class="pgRoute">More <i class="fas fa-arrow-circle-right"></i></a>
         </div>
     </section>
 
