--- a/index.html
+++ b/index.html
@@ -300,7 +300,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                     <a data-toggle="modal" href="#blog-w3ls1" class="blog-link4">
                         <div class="hover01 column">
                             <div>
-                                <figure><img src="images/Patrick.jpeg" alt="Walk to Health" class="img-responsive"></figure>
+                                <figure><img src="images/Environment.jpeg" alt="Enviroment Teachnologies - Sustainable And Strong" class="img-responsive"></figure>
                             </div>
                         </div>
                     </a>
@@ -317,7 +317,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                     <a data-toggle="modal" href="#blog-w3ls2" class="blog-link4">
                         <div class="hover01 column">
                             <div>
-                                <figure><img src="images/Hel.jpeg" alt=" Get the Git" class="img-responsive"></figure>
+                                <figure><img src="images/Edge Computing.jpeg" alt="Edge Computing" class="img-responsive"></figure>
                             </div>
                         </div>
                     </a>
@@ -334,7 +334,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                     <a data-toggle="modal" href="#blog-w3ls3" class="blog-link4">
                         <div class="hover01 column">
                             <div>
-                                <figure><img src="RecentEventImage/Get the git.jpeg" alt="IEEE Explore" class="img-responsive"></figure>
+                                <figure><img src="images/Entrepreneur.jpg" alt="Entrepreneur" class="img-responsive"></figure>
                             </div>
                         </div>
                     </a>
