--- a/recent_events.html
+++ b/recent_events.html
@@ -44,6 +44,67 @@
     <section class="team-agileinfo jarallax blog-w3layouts" id="recentEvents">
         <h3 class="text-center">EVENTS</h3>
         <span class="fa fa-star-o" aria-hidden="true"></span>
+        <div class="container gap">
+            <div class="col-lg-4 col-md-4 col-sm-12">
+                <div class="blog-agile dap" data-aos="zoom-in">
+
+                    <a data-toggle="modal" href="#blog-w3ls20" class="blog-link4">
+                        <div class="hover01 column">
+                            <div>
+                                <figure><img src="images/Environment.jpeg" alt="Environment" class="img-responsive"></figure>
+                            </div>
+                        </div>
+                    </a>
+                    <ul class="social-w3layouts">
+
+                    </ul>
+                    <p class="blog-p1">
+                        <!-- Add a summary -->
+                    </p>
+                    <a data-toggle="modal" href="#blog-w3ls20" class=" "><i class="fa fa-hand-o-right" aria-hidden="true"></i>
+                        Read More</a>
+                </div>
+            </div>
+            <div class="col-lg-4 col-md-4 col-sm-12">
+                <div class="blog-agile dap" data-aos="zoom-in">
+                    <a data-toggle="modal" href="#blog-w3ls19" class="blog-link4">
+                        <div class="hover01 column">
+                            <div>
+                                <figure><img src="images/Edge Computing.jpeg" alt="Edge Computing" class="img-responsive"></figure>
+                            </div>
+                        </div>
+                    </a>
+                    <ul class="social-w3layouts">
+
+                    </ul>
+                    <p class="blog-p1">
+                        <!-- Add summary -->
+                    </p>
+                    <a data-toggle="modal" href="#blog-w3ls19" class=" "><i class="fa fa-hand-o-right" aria-hidden="true"></i>
+                        Read More</a>
+                </div>
+            </div>
+            <div class="col-lg-4 col-md-4 col-sm-12">
+                <div class="blog-agile dap" data-aos="zoom-in">
+
+                    <a data-toggle="modal" href="#blog-w3ls18" class="blog-link4">
+                        <div class="hover01 column">
+                            <div>
+                                <figure><img src="images/Entrepreneur.jpg" alt="Entrepreneur" class="img-responsive">
+                                </figure>
+                            </div>
+                        </div>
+                    </a>
+                    <ul class="social-w3layouts">
+
+                    </ul>
+                    <p class="blog-p1">SIGNOVA’20 was an event jointly organised by IEEE SPS SBC CET, SBC TKMCE and SBC MBCET. The inauguration took place ...</p>
+                    <a data-toggle="modal" href="#blog-w3ls18" class=" "><i class="fa fa-hand-o-right" aria-hidden="true"></i>
+                        Read More</a>
+                </div>
+            </div>
+            <div class="clearfix"></div>
+        </div>
         <!-- Row 1 -->
         <div class="container gap">
             <div class="col-lg-4 col-md-4 col-sm-12">
@@ -187,6 +248,7 @@
 
                     </ul>
                     <p class="blog-p1">
+                        14 Speakers <br>7 Episodes<br>2 Months<br>
                         <!-- Add a summary -->
                     </p>
                     <a data-toggle="modal" href="#blog-w3ls14" class=" "><i class="fa fa-hand-o-right" aria-hidden="true"></i>
@@ -647,6 +709,10 @@
                         </div>
                         <div class="col-lg-6 col-md-6 col-sm-12">
                             <p>
+                                14 Speakers <br>7 Episodes<br>2 Months<br>
+                                As part of Techvistara ep1, presented a video on the topic Immutouch (vibration based smart band feature).  They explained about the use, features and working of the smart band. And also made us aware about how is this technology useful during this pandemic.
+                                <br> As part of Techvistara ep2, presented a video on the topic Focals. They explained about the use, features and working of the smart glasses. Focals is at the leading edge of a brand new category of technology. It was a informative session and their efforts were much appreciated.
+                                <br> As part of Techvistara ep3, presented a video on the topic WATERGEN. They explained about the use, features and working of Watergen. This  technology was developed by Israeli company for sustainable future to eliminate water scarcity. It was a informative session.
                                 <!-- Add Content -->
                             </p>
                         </div>
