--- a/index.html
+++ b/index.html
@@ -324,7 +324,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                     <ul class="social-w3layouts">
 
                     </ul>
-                    <p class="blog-p1">The speaker was Dr. Rani Nallathamby, Associate professor, MBBS, MD, Believers Church Medical College. The session... </p>
+                    <p class="blog-p1"><!-- content --></p>
                     <a data-toggle="modal" href="#blog-w3ls2" class=" "><i class="fa fa-hand-o-right" aria-hidden="true"></i> Read More</a>
                 </div>
             </div>
@@ -341,7 +341,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                     <ul class="social-w3layouts">
 
                     </ul>
-                    <p class="blog-p1">IEEE Computer Society Student Branch in association with the Department of Computer Science and Engineering...</p>
+                    <p class="blog-p1"><!-- content --></p>
                     <a data-toggle="modal" href="#blog-w3ls3" class=" "><i class="fa fa-hand-o-right" aria-hidden="true"></i> Read More</a>
                 </div>
             </div>
