--- a/index.html
+++ b/index.html
@@ -93,6 +93,10 @@ License URL: http://creativecommons.org/licenses/by/3.0/
         </nav>
     </section>
 
+	    <section class="video">
+        <iframe width="1685" height="750" src="IEEEFINAL1_1.mp4" >
+        </iframe>
+    </section>
 
     <!-- banner section -->
     <section class="banner-w3ls">
