--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                 <h1></h1>
             </a>
         </div>
-<!--         <div class="pogoSlider" id="js-main-slider">
+        <div class="pogoSlider" id="js-main-slider">
 
             <div class="pogoSlider-slide " data-transition="horizontalSlide" data-duration="2000" style="background-image:url(images/WIE.jpeg);">
                 <div class="pogoSlider-slide-element">
@@ -151,7 +151,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                     </div>
                 </div>
             </div>
-        </div> -->
+        </div> 
         <!-- .pogoSlider -->
         <div class="modal fade" id="readmore" tabindex="-1" role="dialog" aria-labelledby="largeModal" aria-hidden="true">
             <div class="modal-dialog modal-lg">
