--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
     </section>
 
     <section class="video">
-        <iframe width="1785" height="750" src="IEEEFINAL1_1 (1) (1).mp4" class="img-responsive" >
+        <iframe width="1785" height="750" src="IEEEFINAL1_1 (1) (1).mp4" >
         </iframe>
     </section>
 
