--- a/index.html
+++ b/index.html
@@ -93,10 +93,10 @@ License URL: http://creativecommons.org/licenses/by/3.0/
         </nav>
     </section>
 
-        <section class="video">
-            <iframe width="1700" height="600" src="IEEEFINAL1_1 (1) (1).mp4" class="video-responsive" >
+    <section class="video">
+        <iframe height="600px" src="IEEEFINAL1_1 (1) (1).mp4" class="videoResponsive">
             </iframe>
-        </section>
+    </section>
 
     <!-- banner section -->
     <section class="banner-w3ls">
@@ -105,7 +105,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                 <h1></h1>
             </a>
         </div>
-<!--         <div class="pogoSlider" id="js-main-slider">
+        <!--         <div class="pogoSlider" id="js-main-slider">
 
             <div class="pogoSlider-slide " data-transition="horizontalSlide" data-duration="2000" style="background-image:url(images/WIE.jpeg);">
                 <div class="pogoSlider-slide-element">
@@ -328,7 +328,9 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                     <ul class="social-w3layouts">
 
                     </ul>
-                    <p class="blog-p1"><!-- content --></p>
+                    <p class="blog-p1">
+                        <!-- content -->
+                    </p>
                     <a data-toggle="modal" href="#blog-w3ls2" class=" "><i class="fa fa-hand-o-right" aria-hidden="true"></i> Read More</a>
                 </div>
             </div>
@@ -345,7 +347,9 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                     <ul class="social-w3layouts">
 
                     </ul>
-                    <p class="blog-p1"><!-- content --></p>
+                    <p class="blog-p1">
+                        <!-- content -->
+                    </p>
                     <a data-toggle="modal" href="#blog-w3ls3" class=" "><i class="fa fa-hand-o-right" aria-hidden="true"></i> Read More</a>
                 </div>
             </div>
