--- a/index.html
+++ b/index.html
@@ -93,9 +93,15 @@ License URL: http://creativecommons.org/licenses/by/3.0/
         </nav>
     </section>
 
+
+
     <section class="video">
-        <iframe height="600px" src="IEEEFINAL1_1 (1) (1).mp4" class="videoResponsive">
-            </iframe>
+        <video class="videoResponsive" controls>
+            <source src="IEEEFINAL1_1 (1) (1).mp4" type="video/mp4">
+        
+            Your browser does not support the video tag.
+        </video>
+
     </section>
 
     <!-- banner section -->
