--- a/index.html
+++ b/index.html
@@ -45,8 +45,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 </head>
 
 <body>
-
-
+<!-- Video -->
     <section class="w3l-bootstrap-header">
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
             <div class="w-100 row justify-content-between">
@@ -55,6 +54,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                         <img src="images/IEEE MBCET white.png" class="img-fluid" style="height: 50px;">
                     </div>
                 </div>
+                
 
                 <!-- if logo is image enable this
 		  <a class="navbar-brand" href="#index.html">
@@ -91,6 +91,16 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                 </div>
             </div>
         </nav>
+    </section>
+    <section>
+        <div class="jumbotron jumbotron-fluid bg-secondary">
+            <div class="container">
+              <h2 class="display-4 pb-5">Upcoming Events</h2>
+              <h3>WE WRITE WE INOVATE(IEEE SIGHT)</h3>
+              <p>Date: 7th December <br>Time: 5 to 7pm</p>
+              <p class="lead" ><a href="upcomingEvents.html" target="_blank" style="color: white;">Click Here to Register</a></p>
+            </div>
+          </div>
     </section>
 
 
