--- a/index.html
+++ b/index.html
@@ -93,17 +93,18 @@ License URL: http://creativecommons.org/licenses/by/3.0/
         </nav>
     </section>
     <section>
-        <div class="jumbotron jumbotron-fluid bg-secondary">
-            <div class="container">
-              <h2 class="display-4 pb-5">Upcoming Events</h2>
-              <h3>WE WRITE WE INOVATE(IEEE SIGHT)</h3>
-              <p>Date: 7th December <br>Time: 5 to 7pm</p>
-              <p class="lead" ><a href="upcomingEvents.html" target="_blank" style="color: white;">Click Here to Register</a></p>
+        <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                  <img src="images/Upcoming.jpeg" class="d-block w-100" height="800" alt="...">
+                  <div class="left"><a href="http://bit.ly/tech_article" target="_blank" style="color: black;"><b>Register Now!</b></a> </div>
+              </div>
             </div>
           </div>
     </section>
 
-
+ <!-- <p class="lead" ><a href="upcomingEvents.html" target="_blank" style="color: white;">Click Here to Register</a></p>
+ -->
 
     <section class="video">
         <video class="videoResponsive" controls>
