--- a/index.html
+++ b/index.html
@@ -96,8 +96,8 @@ License URL: http://creativecommons.org/licenses/by/3.0/
         <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
             <div class="carousel-inner">
               <div class="carousel-item active">
-                  <img src="images/Upcoming.jpeg" class="d-block w-100" height="800" alt="...">
-                  <div class="left"><a href="http://bit.ly/tech_article" target="_blank" style="color: black;"><b>Register Now!</b></a> </div>
+                  <img src="images/Upcoming.jpeg" class="img-responsive team-agile pt-5 pb-5" alt="...">
+                  <div class="left"><a href="http://bit.ly/tech_article" target="_blank"><b>Register Now!</b></a> </div>
               </div>
             </div>
           </div>
