--- a/team.html
+++ b/team.html
@@ -117,7 +117,7 @@
           <div class="cnt-block equal-hight" style="height: 280px;">
             <figure><img src="images/File0004.JPG (1).jpg" class="img-responsive" alt=""></figure>
             <h3>Gokul G S</h3>
-            <p>Vise Chairperson</p>
+            <p>Vice Chairperson</p>
           </div>
         </li>
         <li class="col-12 col-md-6 col-lg-3">
@@ -223,7 +223,7 @@
                         <figure><img src="images/ann.jpg" class="img-responsive" alt=""></figure>
                         <h3>Ann Elizabeth B.</h3>
                         <p><b>EMBS</b></p>
-                        <span style="color: black;" ></span>Secretary</span>
+                          <span style="color: black;" >Secretary</span>
                       </div>
                   </li>
               </ul>
