--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
             <div class="carousel-inner">
               <div class="carousel-item active">
                   <img src="images/Upcoming.jpeg" class="img-responsive team-agile pt-5 pb-5" alt="...">
-                  <div class="left"><a href="http://bit.ly/tech_article" target="_blank" style="color: rgb(0, 0, 0);"><b>Register Now!</b></a> </div>
+                  <div class="left"><a href="http://bit.ly/tech_article" target="_blank" style="color: rgb(0, 0, 0);"><b>Click here<br>to Register!</b></a> </div>
               </div>
             </div>
           </div>
